--- a/requirements.txt
+++ b/requirements.txt
@@ -61,7 +61,7 @@ Pygments==2.17.2
 pyproject_hooks==1.1.0
 python-dateutil==2.8.2
 pytz==2024.2
-pywin32==306
+python_version >= "3.12,<3.13"
 pywin32-ctypes==0.2.3
 pyzmq==25.1.2
 RapidFuzz==3.10.0
