--- a/render.yaml
+++ b/render.yaml
@@ -1,2 +1,8 @@
 runtime: python
 version: 3.8
+services:
+  - type: web
+    name: app
+    env: python
+    buildCommand: ""
+    startCommand: gunicorn app:app
